--- a/src/components/Preloader.css
+++ b/src/components/Preloader.css
@@ -1,14 +1,11 @@
 .container {
-    height: 100%;
     box-sizing: border-box;
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
+    height: 3rem;
+    margin-top: 10px;
 }
 
 .circle {
