--- a/src/components/BooksList.css
+++ b/src/components/BooksList.css
@@ -10,3 +10,17 @@
     margin-top: 15px;
     flex-basis: 25%;
 }
+
+@media (max-width: 768px) {
+    .book-wrapper {
+        flex-basis: 50%;
+        padding: 0 20px 0;
+    }
+}
+
+@media (max-width: 600px) {
+    .book-wrapper {
+        flex-basis: 100%;
+        padding: 30px 60px;
+    }
+}
